create variables and header style

--- a/src/scss/base/_index.scss
+++ b/src/scss/base/_index.scss
@@ -1,3 +1,4 @@
-@forward "base";
-@forward "helpers";
-@forward "typography";
+@forward 'base';
+@forward 'helpers';
+@forward 'typography';
+@forward 'animations';
