--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,5 +1,6 @@
 @use '../abstracts' as *;
 
+/*========== Default Typography Styles ==========*/
 body {
   color: var(--dark);
   font: var(--regular-font) var(--normal-font-size) var(--open-sans-font-family);
@@ -10,4 +11,55 @@ h2,
 h3 {
   font-weight: var(--bold-font);
   font-family: var(--lexend-font-family);
+}
+
+h1 {
+  font-size: var(--h1-font-size);
+  line-height: 2.5rem;
+}
+
+h2 {
+  font-size: var(--h2-font-size);
+  line-height: 2.4375rem;
+}
+
+h3 {
+  font-size: var(--h3-font-size);
+  line-height: 2.1875rem;
+}
+
+p {
+  color: var(--grayish-blue);
+}
+
+.card {
+  &__box {
+    &:first-child {
+      i {
+        color: var(--green-color);
+      }
+    }
+
+    &:nth-child(2) {
+      i {
+        color: var(--yellow-color);
+      }
+    }
+
+    &:last-child {
+      i {
+        color: var(--primary-color);
+      }
+    }
+  }
+
+  &__title {
+    font-size: var(--big-font-size);
+    line-height: 1.4875rem;
+  }
+
+  &__paragraph {
+    font-size: var(--small-font-size);
+    line-height: 1.375rem;
+  }
 }
