--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,11 +1,10 @@
 @use '../abstracts' as *;
 
-%contact-button {
+%button {
   padding: 0.75rem 1.5625rem;
   background-color: var(--primary-color);
   color: var(--white-color);
-  font-family: var(--lexend-font-family);
-  font-weight: var(--medium-font);
+  font: var(--medium-font) var(--normal-font-size) var(--lexend-font-family);
   @include button-shadow;
   @include border-radius('5');
   transition: background-color 280ms ease-in-out, box-shadow 280ms ease-in;
@@ -16,6 +15,6 @@
   }
 }
 
-.contact-button {
-  @extend %contact-button;
+.button {
+  @extend %button;
 }
