created service content section

--- a/src/scss/components/_theme-switcher.scss
+++ b/src/scss/components/_theme-switcher.scss
@@ -34,6 +34,7 @@
       width: 10.9375rem;
       height: 3rem;
       background-color: var(--white-color);
+      color: var(--dark);
       border: 0.125rem solid var(--primary-color);
       border-radius: 100vw;
       visibility: hidden;
