--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -2,7 +2,7 @@
 
 /*========== Default Typography Styles ==========*/
 body {
-  color: var(--dark);
+  color: var(--secondary-color);
   font: var(--regular-font) var(--normal-font-size) var(--open-sans-font-family);
 }
 
