--- a/assets/icons/variables.scss
+++ b/assets/icons/variables.scss
@@ -1,34 +1,35 @@
 $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "fonts" !default;
 
-$failed-icon: "\e900";
-$about-icon: "\e901";
-$arrow-up-icon: "\e902";
-$back-end-icon: "\e903";
-$checkmark-icon: "\e904";
-$close-icon: "\e905";
-$company-icon: "\e906";
-$email-icon: "\e907";
-$email-icon_outline: "\e908";
-$facebook-icon: "\e909";
-$five-stars-icon: "\e90a";
-$front-end-icon: "\e90b";
-$gear-icon: "\e90c";
-$home-icon: "\e90d";
-$instagram-icon: "\e90e";
-$left-curved-arrow: "\e90f";
-$linkedin-icon: "\e910";
-$mobile-menu-icon: "\e911";
-$moon-icon: "\e912";
-$phone-icon: "\e913";
-$quote-icon: "\e914";
-$right-curved-arrow: "\e915";
-$rocket-icon: "\e916";
-$services-icon: "\e917";
-$straight-arrow-icon: "\e918";
-$sun-icon: "\e919";
-$team-icon: "\e91a";
-$tech-icon: "\e91b";
-$testimonial-icon: "\e91c";
-$user-icon: "\e91d";
-$ux-ui-design-icon: "\e91e";
+$icon-Star: "\e90a";
+$icon-failed-icon: "\e900";
+$icon-about-icon: "\e901";
+$icon-arrow-up-icon: "\e902";
+$icon-back-end-icon: "\e903";
+$icon-checkmark-icon: "\e904";
+$icon-close-icon: "\e905";
+$icon-company-icon: "\e906";
+$icon-email-icon: "\e907";
+$icon-email-icon_outline: "\e908";
+$icon-facebook-icon: "\e909";
+$icon-front-end-icon: "\e90b";
+$icon-gear-icon: "\e90c";
+$icon-home-icon: "\e90d";
+$icon-instagram-icon: "\e90e";
+$icon-left-curved-arrow: "\e90f";
+$icon-linkedin-icon: "\e910";
+$icon-mobile-menu-icon: "\e911";
+$icon-moon-icon: "\e912";
+$icon-phone-icon: "\e913";
+$icon-quote-icon: "\e914";
+$icon-right-curved-arrow: "\e915";
+$icon-rocket-icon: "\e916";
+$icon-services-icon: "\e917";
+$icon-straight-arrow-icon: "\e918";
+$icon-sun-icon: "\e919";
+$icon-team-icon: "\e91a";
+$icon-tech-icon: "\e91b";
+$icon-testimonial-icon: "\e91c";
+$icon-user-icon: "\e91d";
+$icon-ux-ui-design-icon: "\e91e";
+
