--- a/src/scss/pages/_team.scss
+++ b/src/scss/pages/_team.scss
@@ -12,5 +12,6 @@
   &__subtitle {
     font-weight: var(--semibold-font);
     font-size: var(--smaller-font-size);
+    line-height: initial;
   }
 }
