created footer and small header changes

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -31,6 +31,7 @@
   &__logo {
     a {
       position: relative;
+      outline: none;
 
       img:first-child {
         width: 2.1875rem;
@@ -61,7 +62,8 @@
             transform 300ms linear;
         }
 
-        &:hover {
+        &:hover,
+        &:focus {
           img:last-child {
             left: 2.5rem;
             opacity: 1;
@@ -76,8 +78,12 @@
     position: relative;
     display: none;
 
+    a {
+      outline: none;
+    }
+
     span {
-      color: var(--dark);
+      color: var(--secondary-color);
       font-size: 0.9375rem;
       transition: color 280ms ease-in;
     }
@@ -115,11 +121,7 @@
           display: none;
         }
 
-        i {
-          display: none;
-        }
-
-        span {
+        a {
           position: relative;
 
           &::after {
@@ -134,14 +136,21 @@
             transition: opacity 280ms ease-in-out, left 280ms ease-out;
           }
 
-          &:hover {
-            color: var(--primary-color);
+          &:hover,
+          &:focus {
+            span {
+              color: var(--primary-color);
+            }
 
             &::after {
               opacity: 1;
               left: 0;
             }
           }
+        }
+
+        i {
+          display: none;
         }
       }
 
@@ -181,7 +190,7 @@
           flex-direction: column;
           align-items: center;
           gap: 0.375rem;
-          color: var(--dark);
+          color: var(--secondary-color);
 
           i {
             font-size: 1.125rem;
