--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -2,6 +2,7 @@
 
 %button {
   padding: 0.75rem 1.5625rem;
+  outline: none;
   background-color: var(--primary-color);
   color: var(--white-color);
   font: var(--medium-font) var(--normal-font-size) var(--lexend-font-family);
@@ -9,7 +10,8 @@
   @include border-radius('5');
   transition: background-color 280ms ease-in-out, box-shadow 280ms ease-in;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: var(--primary-color-hover);
     box-shadow: 0 0 0 0;
   }
