--- a/src/scss/components/_theme-switcher.scss
+++ b/src/scss/components/_theme-switcher.scss
@@ -2,8 +2,8 @@
 
 %theme-switcher {
   position: absolute;
-  top: 20px;
-  right: 73px;
+  top: 1.25rem;
+  right: 4.5625rem;
   background-color: transparent;
   cursor: pointer;
 
