--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -12,7 +12,7 @@
     box-shadow: 0 -6px 10px -10px rgb(0 0 0 / 25%);
   }
 
-  @include breakpoint('x-large') {
+  @include breakpoint('large') {
     top: 0;
     bottom: unset;
 
@@ -42,7 +42,7 @@
         display: none;
       }
 
-      @include breakpoint('x-large') {
+      @include breakpoint('large') {
         display: flex;
         align-items: center;
 
@@ -106,7 +106,7 @@
       }
     }
 
-    @include breakpoint('x-large') {
+    @include breakpoint('large') {
       display: flex;
       align-items: center;
       gap: 3.125rem;
@@ -172,18 +172,27 @@
       width: 100%;
       border-radius: 1.5625rem 1.5625rem 0 0;
       box-shadow: 0px -4px 10px -5px rgba(0, 0, 0, 0.25);
-      padding: 2.75rem 2.4375rem 4.75rem 2.375rem;
+      padding: 2.75rem 2.375rem 4.75rem 2.4375rem;
       background-color: var(--white-color);
       opacity: 0;
       visibility: hidden;
       animation: mobileMenuFadeIn 300ms forwards ease-in-out;
 
+      @include breakpoint('medium') {
+        padding: 3.75rem 2.4375rem 4.75rem 2.375rem;
+      }
+
       ul {
         display: grid;
         align-items: flex-end;
         row-gap: 3rem;
-        column-gap: 3.25rem;
+        column-gap: 3.125rem;
         grid-template-columns: repeat(3, 1fr);
+
+        @include breakpoint('medium') {
+          row-gap: 4rem;
+          column-gap: 10.25rem;
+        }
 
         a {
           display: flex;
@@ -220,6 +229,10 @@
         right: 1.5rem;
         visibility: visible;
         opacity: 1;
+
+        @include breakpoint('medium') {
+          right: 2.2rem;
+        }
       }
     }
   }
@@ -228,7 +241,7 @@
     .button {
       display: none;
 
-      @include breakpoint('x-large') {
+      @include breakpoint('large') {
         display: block;
       }
     }
